# ov07670

./: .gitignore  1.py  arduino_uno_ov7670.ino  filename.txt  tty0.py
cpp/: 1.raw  3.raw  5.raw  CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile  client  client.cpp  cmake_install.cmake  raw.raw  raw1.raw  server  server.cpp  server_camera.cpp  z
